--- a/src/pages/this_week/this_week.module.css
+++ b/src/pages/this_week/this_week.module.css
@@ -5,41 +5,35 @@
   font-style: italic;
 }
 
-.scrollable {
-  box-sizing: content-box;
-  margin-right: 2px;
-  margin-bottom: 2px;
-  margin-top: 2px;
-  overflow-y: auto;
+
+.container {
+  margin: 0 auto;
+  height: 460px; /* 550px - 90px navbar */
+  /*width: 400px;*/
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
-.scrollable::-webkit-scrollbar {
+.scrollableContainer {
+  overflow-y: auto;
+  margin-right: 2px;
+  width: calc(100% - 2px); /* This ensures the total width including margin is correct */
+}
+
+.scrollableContainer::-webkit-scrollbar {
   width: 4px;
 }
 
-.scrollable::-webkit-scrollbar-track {
-  background: transparent;
+.scrollableContainer::-webkit-scrollbar-thumb {
+  background-color: transparent;
 }
 
-.scrollable::-webkit-scrollbar-thumb {
-  background: transparent;
-  border-radius: 4px;
-  background-clip: padding-box;
-  transition: background-color 0.2s ease;
+.scrollableContainer:hover::-webkit-scrollbar-thumb {
+  background-color: var(--background-navbar);
 }
 
-.scrollable:hover::-webkit-scrollbar-thumb {
-  background: transparent;
-}
-
-.scrollable::-webkit-scrollbar-thumb:hover {
-  background: var(--background-navbar); 
-}
-
-
-.container {
-  width: 400px;
-  margin: 0 auto;
+.contentSectionWrapper {
   padding-top: 25px;
 }
 
@@ -47,8 +41,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 400px;
-  margin-bottom: 20px;
+  width: calc(400px - 6px); /* Compensate for the scrollbar width */
+  margin: 0 auto 20px auto;
 }
 
 .sectionText {
@@ -88,15 +82,16 @@
 }
 
 .chartContainer {
-  width: 400px;
-  margin: 0 0 20px 0;
+  width: calc(400px - 6px); /* Compensate for the scrollbar width */
+  margin: 0 auto 20px auto;
 }
 
 .siteList {
+  margin: 0 auto 20px auto;
   display: flex;
   flex-direction: column;
   gap: 20px;
-  width: 400px;
+  width: calc(400px - 6px); /* Compensate for the scrollbar width */
 }
 
 .siteItem {
